<resources>
    <string name="app_name">Project Manager</string>
    <string name="tab_text_1">Overview</string>
    <string name="tab_text_2">Projects</string>
    <string name="tab_text_3">Calendar</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hint_project_name">Project Name...</string>
    <string name="button_save">Save</string>
    <string name="project_not_saved">Project not saved</string>
    <string name="hint_project_desc">Project Description</string>
    <string name="hint_task_title">Task Title...</string>
    <string name="hint_task_desc">Task Description</string>
    <string name="unable_to_update">Unable to update task</string>
    <string name="task_empty1">This project has no tasks</string>
    <string name="task_empty2">Start adding tasks by clicking the button on the bottom right</string>
    <string name="task_not_saved">Task not saved</string>
    <string name="start_date">Start Date</string>
    <string name="empty_project1">No Projects</string>
    <string name="empty_project2">Create Projects by clicking the button on the bottom right</string>
    <string name="alert_message">Are you sure you want to delete this project</string>
    <string name="ok">delete</string>
    <string name="cancel">CANCEL</string>
    <string name="delete">DELETE</string>
    <string name="deleteTitle">Delete Project</string>
    <string name="overdue">#ee5253</string>
    <string name="delete_task_title">Delete Task</string>
</resources>
