<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorScreenBackground"
    android:padding="12dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            app:cardElevation="2dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/userIDTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"

                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_name"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_project_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_margin="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_project_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_project_desc" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/start_date"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorPrimary"
                    android:drawableLeft="@drawable/ic_start_date"
                    android:onClick="showDatePickerDialogStart"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="start date"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/end_date"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorPrimary"
                    android:drawableLeft="@drawable/ic_end_date"
                    android:onClick="showDatePickerDialogEnd"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="End Date"
                    android:textColor="@color/colorButtonTextPrimary" />

            </RelativeLayout>



            <Button
                android:id="@+id/button_save_project"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:text="@string/button_save"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content" />

        </LinearLayout>

            </android.support.v7.widget.CardView>

    </ScrollView>

</LinearLayout>