<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenBackground"
    android:orientation="vertical"
    android:padding="12dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/taskTitleTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_task_title"
                    android:inputType="textAutoComplete"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/taskDescTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_task_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/hint_task_desc" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/priority_spinner"
                    android:layout_alignLeft="@+id/priority_spinner"
                    android:layout_alignParentTop="true"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="Priority" />

                <Spinner
                    android:id="@+id/priority_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="30dp"
                    android:padding="4dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/status_spinner"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="Status"
                    android:layout_alignLeft="@+id/status_spinner" />

                <Spinner
                    android:id="@+id/status_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="30dp"
                    android:padding="4dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/start_date"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorPrimary"
                    android:drawableLeft="@drawable/ic_start_date"
                    android:onClick="showDatePickerDialogStart"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="start date"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/end_date"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorPrimary"
                    android:drawableLeft="@drawable/ic_end_date"
                    android:onClick="showDatePickerDialogEnd"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="End Date"
                    android:textColor="@color/colorButtonTextPrimary" />

            </RelativeLayout>


            <Button
                android:id="@+id/button_save_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorAccent"
                android:text="@string/button_save"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    </ScrollView>

</LinearLayout>